<resources>
    <string name="app_name">Milk Trace System</string>
    <string name="zxing_app_name">Barcode Scanner</string>
    <string name="zxing_button_ok">OK</string>
    <string name="zxing_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="zxing_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    
    <!--企业信息展示界面字符串-->
    <string name="corp_name"><u>高原之宝</u></string>
    <string name="corp_type"><u>原料企业</u></string>
    <string name="corp_address"><u>四川省阿坝州若尔盖县达扎寺镇红光路3号</u></string>
    <string name="corp_email"><u> 010-84837962</u></string>
    <string name="corp_desc"><u>西藏高原之宝牦牛乳业股份有限公司成立于2000年5月，注册资本为1.5亿元，总投资规模达8亿元。公司是目前全国规模最大、最具现代化水平的牦牛乳制品加工企业，国家级农业产业化重点龙头企业，也是西藏唯一一家生产牦牛乳制品的企业。目前高原之宝已通过了ISO9001质量管理体系认证和ISO14001环境管理体系认证、危害分析与关键控制点（HACCP）体系认证、诚信管理体系认证、良好生产规范（GMP）认证、中国有机产品认证、美国有机食品认证及欧盟有机牧场认证。公司牵头制定了中国国家牦牛奶行业标准，现正申请中国暨世界牦牛奶生产加工标准，以推动国际国内牦牛奶产业健康、有序发展。</u></string>


    <string name="news_content">
        原装进口牛奶及乳制品全面开启满足13亿中国人味蕾的征程。
        通过严格地卫生管理，从而保障了乳制品从鲜奶生产到加工销售流通环节的产品质量安全。
        为了宣传更健康美味的乳制品，从11月03日起在广州市天河区林和中路63号东方宝泰购物广场 B3中庭举办为期14天的“常喝牛奶，健康常伴!”
        “2017乳制品名品展(广州)”活动。
        据本次活动的有关人士介绍，为了向中国市场的广大消费者提供健康安全牛奶及乳制品，为中国消费者提供试饮，
        由牛奶生产商奶牛农家与六大乳制品加工企业(建国牛奶、南阳乳业、每日乳业、宾格瑞、首尔牛奶、延世牛奶)联合举办本次活动。
    </string>
    <string-array name="login_addr_province">
        <item>江苏省</item>
        <item>上海市</item>
        <item>浙江省</item>
        <item>山东省</item>
    </string-array>
    <string-array name="login_addr_city">
        <item>南京市</item>
        <item>上海市</item>
        <item>杭州市</item>
        <item>济南市</item>
    </string-array>
    <string-array name="Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <!--企业用户进入后选择企业类别-->
    <string-array name="company_type">
        <item>原料厂商</item>
        <item>生产厂商</item>
        <item>运输物流</item>
        <item>零售批发商</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!--material master-->

    <string name="rd_repeat">Repeat</string>
    <string name="rd_daily">Daily</string>
    <string name="rd_weekly">Weekly</string>
    <string name="rd_monthly">Monthly</string>
    <string name="rd_yearly">Yearly</string>
    <string name="rd_none">None</string>
    <string name="rd_every">Every</string>
    <string name="rd_day">day</string>
    <string name="rd_days">days</string>
    <string name="rd_week">week</string>
    <string name="rd_weeks">weeks</string>
    <string name="rd_month">month</string>
    <string name="rd_months">months</string>
    <string name="rd_year">year</string>
    <string name="rd_years">years</string>
    <string name="rd_forever">Forever</string>
    <string name="rd_until">Until</string>
    <string name="rd_until_full">Until a date</string>
    <string name="rd_for">For</string>
    <string name="rd_for_full">For a number of events</string>
    <string name="rd_month_same_day">on the same day each month</string>
    <string name="rd_month_last">on every last %s</string>
    <string name="rd_month_first">on every first %s</string>
    <string name="rd_month_second">on every second %s</string>
    <string name="rd_month_third">on every third %s</string>
    <string name="rd_month_fourth">on every fourth %s</string>
    <string name="rd_event">event</string>
    <string name="rd_events">events</string>
</resources>
